--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import "tailwindcss";
 @import "tw-animate-css";
+
+body {
+  font-family:Arial, Helvetica, sans-serif;
+}
 
 @custom-variant dark (&:is(.dark *));
 
@@ -113,10 +120,40 @@
 }
 
 @layer base {
+
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.hero-image-wrapper {
+  perspective: 1000px;
+}
+
+.hero-image {
+  transform: rotateX(15deg) scale(1);
+  transition: transform 0.5s ease-out;
+  will-change: transform;
+}
+
+.hero-image.scrolled {
+  transform: rotateX(0deg) scale(1) translateY(40px);
+}
+
+.gradient {
+  background-image: linear-gradient(to bottom right, #2563eb, #9333ea); /* blue-600 → purple-600 */
+}
+
+.gradient-title {
+  background-image: linear-gradient(to bottom right, #2563eb, #9333ea);
+  font-weight: 800;
+  letter-spacing: -0.05em;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
